syntax = "proto3";

import "google/protobuf/timestamp.proto";

package membershipQueryService;

option go_package = "./;membershipQueryService";


message Membership {
  string ID = 1;
  string UserID = 2;
  string GroupID = 3;
  int64  Status = 4;
  int64  Role = 5;
  google.protobuf.Timestamp CreatedAt = 6;
  google.protobuf.Timestamp UpdatedAt = 7;
}


message UserMembership {
  string ID = 1;
  string GroupID = 2;
  string UserID = 3;
  string MembershipID = 4;
  string Email = 5;
  string Username = 6;
  int64  Status = 7;
  int64  Role = 8;
  google.protobuf.Timestamp CreatedAt = 9;
  google.protobuf.Timestamp UpdatedAt = 10;
}

message GroupMembership {
  string ID = 1;
  string UserID = 2;
  string GroupID = 3;
  string MembershipID = 4;
  string Name = 5;
  string Description = 6;
  int64  Status = 7;
  int64  Role = 8;
  bool   Creator = 9;
  google.protobuf.Timestamp CreatedAt = 10;
  google.protobuf.Timestamp UpdatedAt = 11;
}


message CreateMembershipReq {
  Membership Membership = 1;
  UserMembership UserMembership = 2;
  GroupMembership GroupMembership = 3;
}

message CreateMembershipRes {
  string ID = 1;
}


message UpdateMembershipReq {
  string ID = 1;
  int64  Status = 4;
  int64  Role = 5;
}

message UpdateMembershipRes {
  string ID = 1;
}


message GetMembershipByIdReq {
  string ID = 1;
}

message GetMembershipByIdRes {
  Membership Membership = 1;
}


message DeleteMembershipByIdReq {
  string ID = 1;
}

message DeleteMembershipByIdRes {}


message GetUserMembershipReq {
  string GroupID = 1;
  int64 page = 2;
  int64 size = 3;
}

message GetUserMembershipRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated UserMembership UserMemberships = 6;
}


message GetGroupMembershipReq {
  string UserID = 1;
  int64 page = 2;
  int64 size = 3;
}

message GetGroupMembershipRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated GroupMembership GroupMemberships = 6;
}